# tex-tweak

./: .env  .gitignore  .pre-commit-config.yaml  DOCKERME.rst  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml  setup.cfg
tests/: test_tex_tweak.py
tex_tweak/: main.py
