[tool.poetry]
name = "tex-tweak"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
rope = "^0.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
ttk = "tex_tweak.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

