[tool.poetry]
name = "tex-tweak"
version = "0.1.0"
description = ""
authors = ["Tyrn <a@b.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.4.4"
rope = "^0.16.0"
mypy = "^0.790"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9"
pytest = "^5.2"

[tool.poetry.scripts]
ttk = "tex_tweak.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
